--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    compileSdkVersion 31
+//    buildToolsVersion "23.0.2"
 
     defaultConfig {
         applicationId "alessandro.draganddrop"
         minSdkVersion 15
-        targetSdkVersion 23
+        targetSdkVersion 31
         versionCode 1
         versionName "1.0"
     }
@@ -20,9 +20,9 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.1.1'
-    compile 'com.android.support:recyclerview-v7:23.1.1'
-    compile 'com.squareup.picasso:picasso:2.5.2'
+    api fileTree(include: ['*.jar'], dir: 'libs')
+//    testImplementation 'junit:junit:4.12'
+    api 'androidx.appcompat:appcompat:1.3.0'
+    api 'androidx.recyclerview:recyclerview:1.2.1'
+    api 'com.squareup.picasso:picasso:2.71828'
 }
