--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion 31
@@ -6,7 +7,7 @@ android {
 
     defaultConfig {
         applicationId "alessandro.draganddrop"
-        minSdkVersion 15
+        minSdkVersion 23
         targetSdkVersion 31
         versionCode 1
         versionName "1.0"
@@ -24,5 +25,10 @@ dependencies {
 //    testImplementation 'junit:junit:4.12'
     api 'androidx.appcompat:appcompat:1.3.0'
     api 'androidx.recyclerview:recyclerview:1.2.1'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     api 'com.squareup.picasso:picasso:2.71828'
+    api 'androidx.cardview:cardview:1.0.0'
+    implementation project(path: ':stickytimelineview')
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+//    implementation project(path: ':stickytimelineview')
 }
